# Aether

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.app  Dockerfile.app.local  README.md  deploy.sh  docker-compose.build.yml  docker-compose.yml
.github/workflows/: docker-publish.yml  rust-ci.yml
aether-hub/: Cargo.toml
aether-hub/src/: control_plane.rs  hub.rs  lib.rs  local_relay.rs  main.rs  proxy_conn.rs
aether-proxy/: Cargo.toml
alembic/versions/: 20260330_1100_a4b5c6d7e8f9_add_access_token_delete_logs.py  20260330_1500_b5c6d7e8f901_add_restore_snapshot_to_access_token_delete_logs.py  20260423_1200_d6e7f8a9b012_backfill_codex_image_endpoint.py
apps/aether-gateway/: Cargo.toml
apps/aether-proxy/: Cargo.toml  README.md
crates/aether-ai-pipeline/: Cargo.toml
crates/aether-ai-pipeline/src/: api.rs  lib.rs
crates/aether-ai-pipeline/src/adaptation/: surfaces.rs
crates/aether-ai-pipeline/src/contracts/: auth_context.rs  control_payloads.rs  mod.rs  plan_kinds.rs  report_kinds.rs
crates/aether-ai-pipeline/src/conversion/: error.rs  mod.rs  registry.rs
crates/aether-ai-pipeline/src/conversion/request/: mod.rs
crates/aether-ai-pipeline/src/conversion/request/from_openai_chat/: claude.rs  gemini.rs  mod.rs  openai_cli.rs
crates/aether-ai-pipeline/src/conversion/request/to_openai_chat/: claude.rs  gemini.rs  mod.rs  openai_cli.rs  shared.rs
crates/aether-ai-pipeline/src/conversion/response/: mod.rs
crates/aether-ai-pipeline/src/conversion/response/from_openai_chat/: claude_chat.rs  gemini_chat.rs  mod.rs  openai_cli.rs  shared.rs
crates/aether-ai-pipeline/src/conversion/response/to_openai_chat/: claude_chat.rs  claude_cli.rs  gemini_chat.rs  gemini_cli.rs  mod.rs  openai_cli.rs  shared.rs
crates/aether-ai-pipeline/src/finalize/: common.rs  mod.rs  sse.rs  stream_rewrite.rs  sync_products.rs
crates/aether-ai-pipeline/src/finalize/standard/claude/: stream.rs
crates/aether-ai-pipeline/src/finalize/standard/gemini/: stream.rs
crates/aether-ai-pipeline/src/finalize/standard/openai/: stream.rs
crates/aether-ai-pipeline/src/finalize/standard/stream_core/: common.rs  format_matrix.rs  mod.rs
crates/aether-ai-pipeline/src/planner/: common.rs  route.rs
crates/aether-ai-pipeline/src/planner/passthrough/: provider.rs
crates/aether-ai-pipeline/src/planner/specialized/: mod.rs
crates/aether-ai-pipeline/src/planner/standard/: codex.rs  matrix.rs  mod.rs  normalize.rs  openai_cli.rs
crates/aether-ai-pipeline/src/planner/standard/claude/: chat.rs  cli.rs
crates/aether-ai-pipeline/src/planner/standard/gemini/: chat.rs  cli.rs
crates/aether-data/: Cargo.toml
crates/aether-data-contracts/: Cargo.toml
crates/aether-executor/: Cargo.toml
crates/aether-gateway/: Cargo.toml
crates/aether-gateway/src/: constants.rs  control.rs  executor.rs  gateway.rs  handlers.rs  lib.rs  main.rs  response.rs  video_tasks.rs
crates/aether-gateway/src/audit/: http.rs  mod.rs  shadow.rs
crates/aether-gateway/src/cache/: mod.rs
crates/aether-gateway/src/data/: auth.rs  config.rs  decision_trace.rs  mod.rs  request_audit.rs  state.rs  tests.rs  usage.rs
crates/aether-gateway/src/executor/: sync.rs
crates/aether-gateway/src/executor/plan_builders/: shared.rs
crates/aether-gateway/src/executor/stream/: execution.rs
crates/aether-gateway/src/executor/sync/: execution.rs
crates/aether-gateway/src/gateway/tests/: audit.rs  concurrency.rs  control.rs  mod.rs
crates/aether-gateway/src/gateway/tests/ai_execute/: auth_cache.rs
crates/aether-gateway/src/gateway/tests/video/: mod.rs
crates/aether-model-fetch/: Cargo.toml
crates/aether-provider-transport/: Cargo.toml
crates/aether-runtime/: Cargo.toml
crates/aether-runtime/src/: admission.rs  bootstrap.rs  config.rs  distributed.rs  lib.rs  observability.rs  tracing.rs
crates/aether-scheduler-core/: Cargo.toml
crates/aether-testkit/: Cargo.toml
crates/aether-usage-runtime/: Cargo.toml
docs/architecture/: refactor-execution-plan.md
frontend/src/: App.vue
src/core/: video_utils.py
src/models/: database.py  endpoint_models.py  openai.py
tests/api/: test_admin_access_token_deletions_routes.py  test_openai_image_adapter.py  test_provider_oauth_batch_import.py
tests/contracts/: test_public_api_routes_contract.py
tests/services/: test_access_token_auto_delete.py  test_analytics_query_service.py  test_aware_scheduler_quota_skipping.py  test_codex_quota.py  test_error_classifier_access_token_delete.py  test_error_handler_access_token_delete.py  (+15 more)
(+936 files in other folders)
