[package]
name = "aether-ai-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared AI pipeline contracts and planner logic for Aether"

[dependencies]
base64.workspace = true
http.workspace = true
serde_json.workspace = true
aether-provider-transport.workspace = true
uuid.workspace = true
