[package]
name = "aether-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared runtime/bootstrap helpers for Aether Rust services"

[dependencies]
async-stream.workspace = true
axum = { version = "0.8" }
futures-util.workspace = true
redis.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
